syntax = "proto3";

package auth;

option go_package = "./pkg/pb";

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
}

message LoginRequest {
    string emailOrUsername = 1;
    string password = 2;
}

message LoginResponse {
    string token = 1;
    string error = 2;
    int64 status = 3;
}

message RegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message RegisterResponse {
    string error = 1;
    int64 status = 2;
    string token = 3;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    string userId = 1;
    string error = 2;
    int64 status = 3;
}